--- a/_posts/2017-02-06-快速搭建个人博客.md
+++ b/_posts/2017-02-06-快速搭建个人博客.md
@@ -14,7 +14,7 @@ tags:
 > 
 > 感谢[Huxpro](https://github.com/huxpro)提供的博客模板
 > 
-> [我的的博客](http://qiubaiying.top)
+> [我的的博客](http://loye168@163.com)
 
 # 前言
 从 Jekyll 到 GitHub Pages 中间踩了许多坑，终于把我的个人博客[BY Blog](http://qiubaiying.top)搭建出来了。。。
@@ -196,7 +196,7 @@ disqus_username: qiubaiying
 
 #### 网站统计
 
-集成了 [Baidu Analytics](http://tongji.baidu.com/web/welcome/login) 和 [Google Analytics](http://www.google.cn/analytics/)，到各个网站注册拿到track_id替换下面的就可以了
+集成了 [Baidu Analytics](http://tongji.baidu.com/web/welcome/login) 和 [Google Analytics](http://www.google.cn/analytics/)，到各个网    	站注册拿到track_id替换下面的就可以了
 
 这是我的 Google Analytics
 
