--- a/_posts/2018-01-04-柔术最大的谎言「译」.md
+++ b/_posts/2018-01-04-柔术最大的谎言「译」.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Rabbit安装以及接受
+title:      Rabbit安装以及介绍
 subtitle:   辩证分析柔术中技术与力量
 date:       2018-01-04
 author:     BY
