--- a/_posts/2018-03-04-Rabbit安装以及介绍.md
+++ b/_posts/2018-03-04-Rabbit安装以及介绍.md
@@ -4,7 +4,7 @@ title:      Rabbit安装以及介绍
 subtitle:   Rabbit安装以及介绍
 date:       2018-03-04
 author:     BY
-header-img: img/post-bg-BJJ.jpg
+header-img: img/timg.jpg
 catalog: true
 tags:
     - BJJ
