--- a/_posts/2018-03-04-Rabbit安装以及介绍.md
+++ b/_posts/2018-03-04-Rabbit安装以及介绍.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      Rabbit安装以及介绍
-subtitle:   Rabbit安装以及介绍
+title:      RabbitMQ安装以及介绍
+subtitle:   RabbitMQ安装以及介绍
 date:       2018-03-04
 author:     BY
 header-img: img/post-bg-BJJ.jpg
