--- a/_posts/2018-03-04-Rabbit安装以及介绍.md
+++ b/_posts/2018-03-04-Rabbit安装以及介绍.md
@@ -15,27 +15,38 @@ tags:
 ![Marcus'Buchecha'Almeida - 现任IBJJF绝对冠军。这家伙很坚强，相信我！图片由BJJ Pix的William Burkhardt提供  。](http://mjrnxewya3t1in23ybpwjw59.wpengine.netdna-cdn.com/wp-content/uploads/buchecha-marcus-almeida-roger-gracie.jpg)
 
 
-最近我看到了一个让我捧腹的柔术笑话。
+RabbitMQ，即消息队列系统，它是一款开源消息队列中间件，采用Erlang语言开发，RabbitMQ是AMQP(Advanced Message Queueing Protocol)的标准实现。
 
-“柔术的技术是无敌的！”
-
-你可能不想听听下面的内容，但是作为一名柔术教练，我的工作是与你分享我认为的真理，而不是虚假的谎言。所以在这里与你们分享我的见解：
+rabbitmq可以用一本书取讲，这里只是介绍一些使用过程中，常用到的基本的知识点。
+官方文档覆盖的内容，非常全面：http://www.rabbitmq.com/documentation.html 。
 
 ### 目录
 
-- 技术不是无敌的
-- 我的见解
-- 一个假设
-- 真实的例子
-- 这个神话是从哪里来的？
-- 好消息
-- 如何变得更强
-- 你该怎么做
+1. 介绍
+2. 安装配置
+3. Exchange类型
+4. Queue属性
+5. Message属性
+6. 插件
+6. 策略 Policy
+7. 消息可靠性
+5. python使用示例
 
+## 介绍
 
-## 技术不是无敌的
+RabbitMQ，即消息队列系统，它是一款开源消息队列中间件，采用Erlang语言开发，RabbitMQ是AMQP(Advanced Message Queueing Protocol)的标准实现。
 
-基础运动能力，特别是力量，对柔术的表现起着巨大的作用，而且往往可以克服技巧。尽管你被告知了卓越的技术并不总是能克服体型和力量优势。但在我看来，力量和技术一样重要。
+AMQP是一个公开发布的异步消息的规范，是提供统一消息服务的应用层标准高级消息队列协议，为面向消息的中间件设计.消息中间件主要用于组件之间的解耦，消息的发送者无需知道消息使用者的存在，反之亦然。
+
+https://www.rabbitmq.com/tutorials/amqp-concepts.html
+
+相对于JMS(Java Message Service)规范来说，JMS使用的是特定语言的APIs，而消息格式可自由定义，而AMQP对消息的格式和传输是有要求的，但实现不会受操作系统、开发语言以及平台等的限制。
+
+JMS和AMQP还有一个较大的区别：JMS有队列(Queues)和主题(Topics)两种消息传递模型，发送到 JMS队列 的消息最多只能被一个Client消费，发送到 JMS主题 的消息可能会被多个Clients消费；AMQP只有队列(Queues)，队列的消息只能被单个接受者消费，发送者并不直接把消息发送到队列中，而是发送到Exchange中，该Exchage会与一个或多个队列绑定，能够实现与JMS队列和主题同样的功能。
+
+另外还有一种 MQTT协议，意为消息队列遥测传输，是IBM开发的一个即时通讯协议。由于其维护一个长连接以轻量级低消耗著称，所以常用于移动端消息推送服务开发。MQTT是基于TCP的应用层协议封装，实现了异步Pub/Sub，在物联网（IoT）应用广泛。
+
+RabbitMQ可通过库、插件的形式，支持JMS和MQTT协议。参考：http://geek.csdn.net/news/detail/71894
 
 ## 我的见解
 
