--- a/_posts/2018-03-04-Rabbit安装以及介绍.md
+++ b/_posts/2018-03-04-Rabbit安装以及介绍.md
@@ -15,7 +15,7 @@ tags:
 ![Marcus'Buchecha'Almeida - 现任IBJJF绝对冠军。这家伙很坚强，相信我！图片由BJJ Pix的William Burkhardt提供  。](http://mjrnxewya3t1in23ybpwjw59.wpengine.netdna-cdn.com/wp-content/uploads/buchecha-marcus-almeida-roger-gracie.jpg)
 
 
-RabbitMQ，即消息队列系统，它是一款开源消息队列中间件，采用Erlang语言开发，RabbitMQ是AMQP(Advanced Message Queueing Protocol)的标准实现。
+RabbitMQ，即消息队列系统，它是一款开源消息队列中间件，采用Erlang语言开发，是AMQP(Advanced Message Queueing Protocol)的标准实现。
 
 rabbitmq可以用一本书取讲，这里只是介绍一些使用过程中，常用到的基本的知识点。
 官方文档覆盖的内容，非常全面：http://www.rabbitmq.com/documentation.html 。
