修改背景图

--- a/_posts/2018-03-04-Rabbit安装以及介绍.md
+++ b/_posts/2018-03-04-Rabbit安装以及介绍.md
@@ -4,7 +4,7 @@ title:      RabbitMQ安装以及介绍
 subtitle:   RabbitMQ安装以及介绍
 date:       2018-03-04
 author:     BY
-header-img: img/post-bg-BJJ.jpg
+header-img: img/post-bg-debug.png
 catalog: true
 tags:
     - BJJ
